Collin, IT, Fixed the account dropdown menu alignment, made some car detail improvements

--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -99,7 +99,7 @@
 .sidebar-dropdown-menu {
   position: absolute;
   top: 100%;
-  right: 0;
+  right: 5;
   background-color: #fff;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   list-style: none;
